--- a/templates/friendslist.html
+++ b/templates/friendslist.html
@@ -5,15 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Friends</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="../static/styles.css">
 </head>
     <body>
         <h1>Choose friends to find games in common with.</h1>
         <form method="POST" class = "select-friends">
-            {% for friend in data %}
-                <div class = "friend">
-                    <h5>{{ friend.personaname }}</h5>
-                    
-                </div>
+            {% for friend in form.friends %}
+                <input class="form-check-input" type="checkbox" label = "{{ friend.label }}" {% if friend.selected %}selected{% endif %}>
             {% endfor %}
             {{ form.submit() }}
         </form>
