--- a/templates/sharedgames.html
+++ b/templates/sharedgames.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shared Games</title>
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <form method="POST">
