--- a/templates/sharedgames.html
+++ b/templates/sharedgames.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     {% for friend in choices %}
-        <p>{{ loop.index }}</p>
+        <p>{{ friend.personaname }}</p>
     {% endfor %}
 
 </body>
