--- a/templates/friendslist.html
+++ b/templates/friendslist.html
@@ -9,15 +9,15 @@
 </head>
     <body>
         <h1>Choose friends to find games in common with.</h1>
-        <form method="POST" class = "select-friends">
+        <form method="POST" class = "select">
             {{ form.hidden_tag() }}
             
-            {% for friend in form.friends %}
-                <input type="checkbox" id="friend-{{ loop.index }}" value="{{ friend.steamid }}" label = "{{ friend.name }}" {% if friend.checked %}{{ friend.selected }}{% endif %}>
+            <!--{% for friend in form.friends %}
+                <input type="checkbox" id="friend-{{ loop.index }}" value="{{ friend.steamid }}" label = "{{ friend.name }}" {% if friend.checked %}{{ friend.selected }}{% endif %}> 
                 <label>{{ friend.data.personaname }}</label>
-            {% endfor %}
-            
-            <p>{{ form.submit() }}</p>
+            {% endfor %} -->
+            {{ form.friends() }}
+            {{ form.submit() }}
             <!--Debugging-->
         </form>
     </body>
