Before filtering the common games, need to check if the profile id added to the list of selections is set to public through steam's api

--- a/templates/friendslist.html
+++ b/templates/friendslist.html
@@ -12,9 +12,12 @@
         <form method="POST" class = "select">
             {{ form.hidden_tag() }}
         
-            {{ form.friends }}
-            {{ form.submit() }}
-            
+            <div class = "friendForm">
+                {{ form.friends }}
+            </div>
+            <div>
+                {{ form.submit }}
+            </div>
             
         </form>
     </body>
